mybril/src/snapshots/mybril__dataflow__test__defined@cond-args.bril.snap
---
source: mybril/src/dataflow.rs
expression: "format!(\"{txt}\\n{output}\")"
input_file: mybril/tests/examples/df/cond-args.bril
---
@main(cond: bool) {
  a: int = const 47;
  b: int = const 42;
  br cond .left .right;
.left:
  b: int = const 1;
  c: int = const 5;
  jmp .end;
.right:
  a: int = const 2;
  c: int = const 10;
  jmp .end;
.end:
  d: int = sub a c;
  print d;
}

main:
  b0:
    in: {}
    out: {"a", "b"}
  left:
    in: {"a", "b"}
    out: {"a", "b", "c"}
  right:
    in: {"a", "b"}
    out: {"a", "b", "c"}
  end:
    in: {"a", "b", "c"}
    out: {"a", "b", "c", "d"}


