mybril/src/snapshots/mybril__dataflow__test__defined_generic@cond.bril.snap
---
source: mybril/src/dataflow.rs
expression: "format!(\"{txt}\\n{output}\")"
input_file: mybril/tests/examples/df/cond.bril
---
@main {
  a: int = const 47;
  b: int = const 42;
  cond: bool = const true;
  br cond .left .right;
.left:
  b: int = const 1;
  c: int = const 5;
  jmp .end;
.right:
  a: int = const 2;
  c: int = const 10;
  jmp .end;
.end:
  d: int = sub a c;
  print d;
}

main:
  b0:
    in: {}
    out: {"a", "b", "cond"}
  left:
    in: {"a", "b", "cond"}
    out: {"a", "b", "c", "cond"}
  right:
    in: {"a", "b", "cond"}
    out: {"a", "b", "c", "cond"}
  end:
    in: {"a", "b", "c", "cond"}
    out: {"a", "b", "c", "cond", "d"}


